Arreglo de organizacion y agregar un index

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuarios ForLive</title>
+    <title>Bienvenido a ForLive</title>
+    <link rel="stylesheet" href="css/diseño.css">
 </head>
 <body>
-    <h1>Bienvenido a Usuarios ForLive</h1>
-    <a id="inicio_sesion" href="login.php">Iniciar Sesión</a> | 
-    <a id="registro" href="registro.php">Registrarse</a>
+    <header>
+        <h1>ForLive</h1>
+    </header>
+    <div class="container">
+        <h2>Bienvenido</h2>
+        <p>Accede a tu cuenta o regístrate para comenzar.</p>
+        <div style="display: flex; flex-direction: column; gap: 15px;">
+            <a id="login" href="html/Inicio de Seción.html" style="text-align:center; padding: 15px; background: #4bc970; color: #fff; border-radius: 5px; text-decoration: none; font-weight: 600;">Iniciar Sesión</a>
+            <a id="registro" href="html/Registro.html" style="text-align:center; padding: 15px; background: #23263a; color: #4bc970; border: 1px solid #4bc970; border-radius: 5px; text-decoration: none; font-weight: 600;">Registrarse</a>
+        </div>
+    </div>
 </body>
 </html>
