--- a/html/Registro.html
+++ b/html/Registro.html
@@ -15,6 +15,7 @@
         <p>¿Ya tienes cuenta? <a id="login" href="Inicio de Seción.html">Iniciar Sesión</a></p>
         <form action="../php/registro.php" method="POST">
             Nombre de Usuario: <input type="text" name="identificador" required><br>
+            Email: <input type="email" name="email" required><br>
             Nombre: <input type="text" name="nombre" required><br>
             Apellidos: <input type="text" name="apellidos" required><br>
             Contraseña: <input type="password" name="password" required><br>
