--- a/html/Inicio.html
+++ b/html/Inicio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ForLive - Página Principal</title>
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/diseño.css">
     <link rel="stylesheet" href="../css/icomoon/style.css">
     <?php
