--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a ForLive</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/diseño.css">
 </head>
 <body>
